Update contact email in privacy policy

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <h2>10. Contact</h2>
             <p>For privacy-related questions, contact us at:</p>
-            <p><strong>Email:</strong> housam.aboessa@gmail.com</p>
+            <p><strong>Email:</strong> gptbusinesshub@gmail.com</p>
         </div>
 
         <div class="footer">
