--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <h2>10. Kontakt</h2>
             <p>Bei Fragen zum Datenschutz erreichst du uns unter:</p>
-            <p><strong>E-Mail:</strong> housam.aboessa@gmail.com</p>
+            <p><strong>E-Mail:</strong> gptbusinesshub@gmail.com</p>
         </div>
 
         <!-- ENGLISH -->
